Fix positioning of the "Update scanning results" button on mobile layout

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -21,14 +21,6 @@
 	#app-view:not(.started) {
 		padding-top: 66px;
 	}
-
-	#updateData {
-		left: 0;
-	}
-
-	#controls {
-		left: 0;
-	}
 }
 
 .mobile #app-view {
