--- a/css/public/app.css
+++ b/css/public/app.css
@@ -7,14 +7,6 @@
 	#app-view:not(.started) {
 		padding-top: 66px;
 	}
-
-	#updateData {
-		left: 0;
-	}
-
-	#controls {
-		left: 0;
-	}
 }
 
 .mobile #app-view {
@@ -1149,7 +1141,6 @@ div:hover > .play-pause,
 	height: 40px;
 	padding: 10px;
 	bottom: 0;
-	left: 250px;
 	z-index: 101;
 	background-color: rgba(255,255,255,0.5);
 
